# zrozumiec-programowanie

007-Czesc_II-Rozdzial_3-Podstawy_architektury_komputerowe/: .pre-commit-config.yaml  README.md  pyproject.toml
007-Czesc_II-Rozdzial_3-Podstawy_architektury_komputerowe/vm/: add.nasm  all_instr.nasm  debug.py  dev_con.py  hello  instr.py  memory.py  test.py  vm.py  vm_dev_timer.py  vm_regs.py
007-Czesc_II-Rozdzial_3-Podstawy_architektury_komputerowe/vm/nasm/: add.nasm  all_instr.nasm  bf.nasm  console_test.nasm  hello.nasm  pit_test.nasm  test-all-the-things.nasm  unlucky-RAM-upgrade-jmpr.nasm  unlucky-RAM-upgrade-vret.nasm  upper.nasm
